# vdoc_documentator

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.agent/workflows/: vdoc-clean.md  vdoc-delete-cli.md  vdoc-exec.md  vdoc-help.md  vdoc-init.md  vdoc-plan.md  vdoc-update.md
.cursor/rules/: vdoc-exec.mdc  vdoc-plan.mdc
product_documentation/: EXECUTION_PROMPT.md  INIT_PROMPT.md  INSTALLATION.md  INTEGRATION_RESEARCH.md  PLANNING_PROMPT.md  Rules.md  _manifest.json
product_plans/: PRD.md
src/vdoc/: config.py  integrations.py  main.py  prompts.py  scanner.py  services.py  state.py
src/vdoc/commands/: clean.py  delete_cli.py  exec.py  init.py  plan.py  update.py
test_scripts/: test_clean.py  test_integrations.py  test_main.py  test_smart_scanner.py  test_workflow_commands.py
